
Support building packages inside a chroot jail.
----------------------------------------------------------------------
Wed Dec 31 08:21:47 2003                        Michael Jennings (mej)

Minor fixes.
----------------------------------------------------------------------
Wed Dec 31 16:08:26 2003                        Michael Jennings (mej)

Working on hint and chroot-resync support.
----------------------------------------------------------------------
Sat Jan  3 19:45:10 2004                        Michael Jennings (mej)

Fix rebuild of SRPM's.
----------------------------------------------------------------------
Mon Jan  5 14:33:06 2004                        Michael Jennings (mej)

Added support for instroot init/reset/copy.
----------------------------------------------------------------------
Mon Jan  5 16:16:49 2004                        Michael Jennings (mej)

Update help screens.
----------------------------------------------------------------------
Tue Jan  6 17:20:29 2004                        Michael Jennings (mej)

Added support for setting hints/hint installer from environment.
----------------------------------------------------------------------
Sat Jan 10 10:07:58 2004                        Michael Jennings (mej)

Install BuildRequires and BuildPrereq's in addition to Hints before
building.
----------------------------------------------------------------------
Wed Jan 14 21:46:23 2004                        Michael Jennings (mej)

Fixes to chroot builds and dependency handling.
----------------------------------------------------------------------
Fri Jan 23 08:30:25 2004                        Michael Jennings (mej)

Working on parallel build fixes.
----------------------------------------------------------------------
Fri Jan 23 19:20:23 2004                        Michael Jennings (mej)

Fixes for parallel chrooted builds.
----------------------------------------------------------------------